--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "react-redux": "^8.0.5",
     "web-vitals": "^2.1.4"
