--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movies",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sunnyfur.github.io/movies/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
